# controller/garb.go
@@ -3,7 +3,6 @@ package controller
 import (
 	"fmt"
 	"net/http"
-	"time"
 
 	"github.com/Serendipity565/GrabSeat/api/request"
 	"github.com/Serendipity565/GrabSeat/api/response"
@@ -13,14 +12,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-var Areas = []string{"101699191", "101699189", "101699187", "101699179"}
-
 type GarbController struct {
-	// gs service.GarbService
+	gs service.GrabberService
 }
 
-func NewGarbHandler() *GarbController {
-	return &GarbController{}
+func NewGarbHandler(gs service.GrabberService) *GarbController {
+	return &GarbController{
+		gs: gs,
+	}
 }
 
 func (gc *GarbController) RegisterGarbRouter(r *gin.RouterGroup, authMiddleware gin.HandlerFunc) {
@@ -29,7 +28,7 @@ func (gc *GarbController) RegisterGarbRouter(r *gin.RouterGroup, authMiddleware 
 		c.POST("/findvacantseats", authMiddleware, ginx.WrapClaimsAndReq(gc.FindVacantSeats))
 		c.POST("/seatttoname", authMiddleware, ginx.WrapClaimsAndReq(gc.SeatToName))
 		c.POST("/isinlibrary", authMiddleware, ginx.WrapClaimsAndReq(gc.IsInLibrary))
-		c.POST("/mgarb", authMiddleware, ginx.WrapClaimsAndReq(gc.MGarb))
+		c.POST("/garb", authMiddleware, ginx.WrapClaimsAndReq(gc.Garb))
 	}
 }
 
@@ -40,13 +39,13 @@ func (gc *GarbController) RegisterGarbRouter(r *gin.RouterGroup, authMiddleware 
 //	@Tags			garb
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization	header		string													true	"Bearer {{JWT}}"
-//	@Param			request			body		request.MFindVacantSeatsReq								true	"查找空座位请求参数"
-//	@Success		200				{object}	response.Response{data=response.MFindVacantSeatsResp}	"成功返回空座位列表"
-//	@Failure		400				{object}	response.Response										"请求参数错误"
-//	@Failure		500				{object}	response.Response										"服务器内部错误"
+//	@Param			Authorization	header		string									true	"Bearer {{JWT}}"
+//	@Param			request			body		request.FindVacantSeatsReq				true	"查找空座位请求参数"
+//	@Success		200				{object}	response.Response{data=[]response.Seat}	"成功返回空座位列表"
+//	@Failure		400				{object}	response.Response						"请求参数错误"
+//	@Failure		500				{object}	response.Response						"服务器内部错误"
 //	@Router			/api/v1/garb/findvacantseats [post]
-func (gc *GarbController) FindVacantSeats(c *gin.Context, req request.MFindVacantSeatsReq, uc ijwt.UserClaims) (response.Response, error) {
+func (gc *GarbController) FindVacantSeats(c *gin.Context, req request.FindVacantSeatsReq, uc ijwt.UserClaims) (response.Response, error) {
 	if req.StartTime >= req.EndTime {
 		return response.Response{
 			Code: http.StatusBadRequest,
@@ -54,59 +53,66 @@ func (gc *GarbController) FindVacantSeats(c *gin.Context, req request.MFindVacan
 			Data: "开始时间必须小于结束时间",
 		}, nil
 	}
-	grabber := service.NewGrabber(Areas, req.IsTomorrow, req.StartTime, req.EndTime)
-	grabber.StartFlushClient(uc.UserId, uc.Password, time.Second*10)
-	mDevId := grabber.MFindVacantSeats(req.KeyWord)
+	client, err := gc.gs.GetClient(uc.UserId, uc.Password)
+	if err != nil {
+		return response.Response{}, err
+	}
+	seats, err := gc.gs.FindVacantSeats(client, req.StartTime, req.EndTime, req.KeyWord, *req.IsTomorrow)
+	if err != nil {
+		return response.Response{}, err
+	}
 	return response.Response{
 		Code: 0,
 		Msg:  "Success",
-		Data: response.MFindVacantSeatsResp{
-			Seats: mDevId,
-		},
+		Data: seats,
 	}, nil
 }
 
 // SeatToName 座位号转名字接口
-// @Summary		座位号转名字接口
-// @Description	座位号转名字接口
-// @Tags			garb
-// @Accept			json
-// @Produce		json
-// @Param			Authorization	header		string											true	"Bearer {{JWT}}"
-// @Param			request			body		request.SeatToNameReq							true	"座位号转名字请求参数"
-// @Success		200				{object}	response.Response{data=response.SeatToNameResp}	"成功返回座位号对应的名字"
-// @Failure		400				{object}	response.Response								"请求参数错误"
-// @Failure		500				{object}	response.Response								"服务器内部错误"
-// @Router			/api/v1/garb/seatttoname [post]
+//
+//	@Summary		座位号转名字接口
+//	@Description	座位号转名字接口
+//	@Tags			garb
+//	@Accept			json
+//	@Produce		json
+//	@Param			Authorization	header		string									true	"Bearer {{JWT}}"
+//	@Param			request			body		request.SeatToNameReq					true	"座位号转名字请求参数"
+//	@Success		200				{object}	response.Response{data=[]response.Ts}	"成功返回座位号对应的名字"
+//	@Failure		400				{object}	response.Response						"请求参数错误"
+//	@Failure		500				{object}	response.Response						"服务器内部错误"
+//	@Router			/api/v1/garb/seatttoname [post]
 func (gc *GarbController) SeatToName(c *gin.Context, req request.SeatToNameReq, uc ijwt.UserClaims) (response.Response, error) {
-	grabber := service.NewGrabber(Areas, false, "08:00", "22:00") //这里的是时间设置不重要
-	grabber.StartFlushClient(uc.UserId, uc.Password, time.Second*10)
-	ts := grabber.SeatToName(req.SeatId)
+	client, err := gc.gs.GetClient(uc.UserId, uc.Password)
+	if err != nil {
+		return response.Response{}, err
+	}
+	ts, err := gc.gs.SeatToName(client, req.SeatName, *req.IsTomorrow)
 	return response.Response{
 		Code: 0,
 		Msg:  "Success",
-		Data: response.SeatToNameResp{
-			Ts: ts,
-		},
+		Data: ts,
 	}, nil
 }
 
 // IsInLibrary 检查目标用户当前是否在图书馆
-// @Summary		检查目标用户当前是否在图书馆
-// @Description	检查目标用户当前是否在图书馆
-// @Tags			garb
-// @Accept			json
-// @Produce		json
-// @Param			Authorization	header		string							true	"Bearer {{JWT}}"
-// @Param			request			body		request.IsInLibraryReq			true	"检查目标用户当前是否在图书馆请求参数"
-// @Success		200				{object}	response.Response{data=string}	"成功返回在图书馆的时间段"
-// @Failure		400				{object}	response.Response				"请求参数错误"
-// @Failure		500				{object}	response.Response				"服务器内部错误"
-// @Router			/api/v1/garb/isinlibrary [post]
+//
+//	@Summary		检查目标用户当前是否在图书馆
+//	@Description	检查目标用户当前是否在图书馆
+//	@Tags			garb
+//	@Accept			json
+//	@Produce		json
+//	@Param			Authorization	header		string							true	"Bearer {{JWT}}"
+//	@Param			request			body		request.IsInLibraryReq			true	"检查目标用户当前是否在图书馆请求参数"
+//	@Success		200				{object}	response.Response{data=string}	"成功返回在图书馆的时间段"
+//	@Failure		400				{object}	response.Response				"请求参数错误"
+//	@Failure		500				{object}	response.Response				"服务器内部错误"
+//	@Router			/api/v1/garb/isinlibrary [post]
 func (gc *GarbController) IsInLibrary(c *gin.Context, req request.IsInLibraryReq, uc ijwt.UserClaims) (response.Response, error) {
-	grabber := service.NewGrabber(Areas, false, "08:00", "22:00") //这里的是时间设置不重要
-	grabber.StartFlushClient(uc.UserId, uc.Password, time.Second*10)
-	ot := grabber.IsInLibrary(req.Username)
+	client, err := gc.gs.GetClient(uc.UserId, uc.Password)
+	if err != nil {
+		return response.Response{}, err
+	}
+	ot, _ := gc.gs.IsInLibrary(client, req.StudentName)
 	if ot != nil {
 		return response.Response{
 			Code: 0,
@@ -122,19 +128,20 @@ func (gc *GarbController) IsInLibrary(c *gin.Context, req request.IsInLibraryReq
 	}
 }
 
-// MGarb 抢座接口
-// @Summary		抢座接口
-// @Description	抢座接口
-// @Tags			garb
-// @Accept			json
-// @Produce		json
-// @Param			Authorization	header		string							true	"Bearer {{JWT}}"
-// @Param			request			body		request.MGarbReq				true	"抢座请求参数"
-// @Success		200				{object}	response.Response{data=string}	"成功返回抢座结果"
-// @Failure		400				{object}	response.Response				"请求参数错误"
-// @Failure		500				{object}	response.Response				"服务器内部错误"
-// @Router			/api/v1/garb/mgarb [post]
-func (gc *GarbController) MGarb(c *gin.Context, req request.MGarbReq, uc ijwt.UserClaims) (response.Response, error) {
+// Garb 抢座接口
+//
+//	@Summary		抢座接口
+//	@Description	抢座接口
+//	@Tags			garb
+//	@Accept			json
+//	@Produce		json
+//	@Param			Authorization	header		string							true	"Bearer {{JWT}}"
+//	@Param			request			body		request.GarbReq					true	"抢座请求参数"
+//	@Success		200				{object}	response.Response{data=string}	"成功返回抢座结果"
+//	@Failure		400				{object}	response.Response				"请求参数错误"
+//	@Failure		500				{object}	response.Response				"服务器内部错误"
+//	@Router			/api/v1/garb/garb [post]
+func (gc *GarbController) Garb(c *gin.Context, req request.GarbReq, uc ijwt.UserClaims) (response.Response, error) {
 	if req.StartTime >= req.EndTime {
 		return response.Response{
 			Code: http.StatusBadRequest,
@@ -142,39 +149,24 @@ func (gc *GarbController) MGarb(c *gin.Context, req request.MGarbReq, uc ijwt.Us
 			Data: "开始时间必须小于结束时间",
 		}, nil
 	}
-	grabber := service.NewGrabber(Areas, req.IsTomorrow, req.StartTime, req.EndTime)
-	grabber.StartFlushClient(uc.UserId, uc.Password, time.Second*10)
-	devId := grabber.MFindVacantSeats(req.KeyWord)
-	if len(devId) == 0 {
-		return response.Response{
-			Code: http.StatusOK,
-			Msg:  "fail",
-			Data: "没有空座位",
-		}, nil
+	client, err := gc.gs.GetClient(uc.UserId, uc.Password)
+	if err != nil {
+		return response.Response{}, err
 	}
-	select {
-	case <-time.After(10 * time.Second):
+	success, err := gc.gs.Grab(client, req.SeatID, req.StartTime, req.EndTime, *req.IsTomorrow)
+	if err != nil {
+		return response.Response{}, err
+	}
+	if !success {
 		return response.Response{
 			Code: http.StatusOK,
 			Msg:  "fail",
 			Data: "抢座超时，未能成功抢到座位",
 		}, nil
-	default:
-		for _, val := range devId {
-			grabber.Grab(val.DevId)
-			// 二次成功验证
-			if grabber.GrabSuccess() {
-				return response.Response{
-					Code: http.StatusOK,
-					Msg:  "success",
-					Data: fmt.Sprintf("抢座成功，座位号：%s", val.Title),
-				}, nil
-			}
-		}
 	}
 	return response.Response{
 		Code: http.StatusOK,
-		Msg:  "fail",
-		Data: "抢座超时，未能成功抢到座位",
+		Msg:  "success",
+		Data: "抢座成功",
 	}, nil
 }
